[gd_scene load_steps=2 format=3 uid="uid://bsmmh7fwif20h"]

[ext_resource type="Script" path="res://addons/htn_editor/PrimitiveEditor.gd" id="1_x1oia"]

[node name="PrimitiveEditor" type="VBoxContainer" node_paths=PackedStringArray("arg_names")]
script = ExtResource("1_x1oia")
arg_names = NodePath("HBoxContainer/ArgNames")

[node name="Path" type="Label" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="TaskName" type="LineEdit" parent="HBoxContainer"]
layout_mode = 2
placeholder_text = "task name"
expand_to_text_length = true
caret_blink = true

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = ": "

[node name="ArgNames" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="AddArg" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "AddArg"

[node name="DelArg" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "DelArg"

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/margin_left = 40
theme_override_constants/margin_right = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Margin"]
layout_mode = 2

[node name="Params" type="VBoxContainer" parent="Margin/VBoxContainer"]
layout_mode = 2

[node name="Precondition" type="LineEdit" parent="Margin/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
placeholder_text = "precondition"
expand_to_text_length = true

[node name="Delete" type="Label" parent="Margin/VBoxContainer"]
layout_mode = 2
text = "Delete List"

[node name="Margin" type="MarginContainer" parent="Margin/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20

[node name="HBoxContainer" type="HBoxContainer" parent="Margin/VBoxContainer/Margin"]
layout_mode = 2

[node name="DeleteList" type="HBoxContainer" parent="Margin/VBoxContainer/Margin/HBoxContainer"]
layout_mode = 2

[node name="AddDelKey" type="Button" parent="Margin/VBoxContainer/Margin/HBoxContainer"]
layout_mode = 2
text = " + "

[node name="RemoveDelKey" type="Button" parent="Margin/VBoxContainer/Margin/HBoxContainer"]
layout_mode = 2
text = " - "

[node name="Add" type="Label" parent="Margin/VBoxContainer"]
layout_mode = 2
text = "Add List
"

[node name="Margin2" type="MarginContainer" parent="Margin/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Margin/VBoxContainer/Margin2"]
layout_mode = 2

[node name="AddList" type="VBoxContainer" parent="Margin/VBoxContainer/Margin2/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Margin/VBoxContainer/Margin2/VBoxContainer"]
layout_mode = 2

[node name="AddEffect" type="Button" parent="Margin/VBoxContainer/Margin2/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = " + "

[connection signal="text_changed" from="HBoxContainer/TaskName" to="." method="_on_task_name_changed"]
[connection signal="pressed" from="HBoxContainer/AddArg" to="." method="_on_add_arg_pressed"]
[connection signal="pressed" from="HBoxContainer/DelArg" to="." method="_on_del_arg_pressed"]
[connection signal="text_changed" from="Margin/VBoxContainer/Precondition" to="." method="_on_pre_text_changed"]
[connection signal="pressed" from="Margin/VBoxContainer/Margin/HBoxContainer/AddDelKey" to="." method="_on_add_del_key_pressed"]
[connection signal="pressed" from="Margin/VBoxContainer/Margin/HBoxContainer/RemoveDelKey" to="." method="_remove_del_key_pressed"]
[connection signal="pressed" from="Margin/VBoxContainer/Margin2/VBoxContainer/HBoxContainer2/AddEffect" to="." method="_on_add_effect_pressed"]
